--- a/src/app/apropos-page/apropos-page.component.html
+++ b/src/app/apropos-page/apropos-page.component.html
@@ -15,6 +15,15 @@
 </head>
 
 <body>
+    <div class="bod">
+        <div class="container">
+          <app-header></app-header>
+ 
+                
+                
+                  
+       </div>        
+      </div>
 <section>
      <header>
         <div class="hsf-container">
