--- a/src/app/page-risque/page-risque.component.html
+++ b/src/app/page-risque/page-risque.component.html
@@ -1,10 +1,13 @@
 <html>
    
 <body>
-   <head>
-    <meta name=”viewport” content="width=device-width, initial-scale=1.0">
-   </head>
-  
+    <div class="bod">
+        <div class="container">
+          <app-header></app-header>
+   
+                  
+       </div>        
+      </div>
       <section class="container">
             <div  style="background: white; position: absolute; top: 40%;left:10%">
              
