--- a/src/app/questionnaire/questionnaire.component.html
+++ b/src/app/questionnaire/questionnaire.component.html
@@ -1,6 +1,14 @@
 <html>
     <body>
-      
+      <div class="bod">
+         <div class="container">
+           <app-header></app-header>
+  
+                 
+                 
+                   
+        </div>        
+       </div>
       <div class="form-style-10">
       <h1>ÉVALUEZ VOS RISQUES</h1>
       <form #f="ngForm" (ngSubmit)="onSave(f.value)" novalidate>
