--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,9 +4,11 @@
     <i class="fa fa-bars" id="btn"></i>
     <i class="fa fa-times" id="cancel"></i>
   </label>
- <img class="img-reponsive" src="../assets/images/icon.png" >
+ <img class="img-reponsive" src="../assets/images/icon.png">
   
   <ul >
+    <li  routerLinkActive="active"><a  class="main-nav__link" routerLink="/accueil" >Accueil </a>
+    </li>
     <li  routerLinkActive="active"><a  class="main-nav__link" routerLink="/apropos" >A propos da la maladie </a>
     </li>
     <li  routerLinkActive="active" ><a class="main-nav__link" routerLink="/symptome">Signes de crise cardiaque </a>
