--- a/src/app/questionnaire/questionnaire.component.css
+++ b/src/app/questionnaire/questionnaire.component.css
@@ -42,9 +42,8 @@ padding:30px;
 margin:40px auto;
 background: #FFF;
 border-radius: 10px;
-
-box-shadow:0px 5px 10px 0px rgba(0,47,104,0.2)
-
+box-shadow:0px 5px 10px 0px rgba(0,47,104,0.2);
+margin-top: 100px;
 
 
 }
