--- a/src/app/symptome-page/symptome-page.component.html
+++ b/src/app/symptome-page/symptome-page.component.html
@@ -13,7 +13,12 @@
 </head>
 
 <body>
-
+        <div class="container">
+          <app-header></app-header>
+        
+                  
+       </div>        
+ 
       <section class="hsf-landing-header">
             <div class="signes">
                  
