--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -225,7 +225,7 @@ label #cancel{
     width: 100px;
   }
   */
-@media (max-width:1060px){
+@media (max-width:1000px){
   .logo {
     display: inline-block;
     font-size: 22px;
@@ -236,13 +236,14 @@ label #cancel{
 
   label #btn{
     display: block;
+   /* margin-top: -4%;*/
   }
   ul{
     position: fixed;
     width: 100%;
     height: 100vh;
     background: grey;
-    top:80px;
+    top:10.5%;
     left: -100%;
     text-align: center;
     transition: all .5s;
