--- a/src/app/questionnaire/questionnaire.component.html
+++ b/src/app/questionnaire/questionnaire.component.html
@@ -2,8 +2,7 @@
     <body>
       <div class="bod">
          <div class="container">
-           <app-header></app-header>
-  
+         
                  
                  
                    
@@ -15,12 +14,11 @@
    
           <div class="section"><span>1</span>Quel est votre Sexe ?</div>
           <div class="inner-wrap">
-           <label class="radio-inline">
+          
              <input type="radio" value="1" name="sexe" [(ngModel)]="sexe" #se='ngModel' required > Homme
-            </label> <br>
-            <label class="radio-inline">
-             <input type="radio" value="0" name="sexe" [(ngModel)]="sexe" #se='ngModel' required> Femme
-            </label>
+            <br>
+             <input type="radio" value="0" name="sexe" [(ngModel)]="sexe" #se='ngModel' required> Femme<br>
+             <small class="text-danger" [class.d-none]="type.valid || type.untouched">Ce champs est obligatoire</small>
            
           </div>
           
@@ -36,18 +34,19 @@
             <div class="section"><span>3</span>Vous souffrez de quel type de poitrine ?</div>
       
             <div class="inner-wrap">    
-               <label class="radio-inline">
-                 <input type="radio" value="1" name="cp" [(ngModel)]="cp"> 1 : pour angine de poitrine typique
-               </label> 
-               <label class="radio-inline">
-                  <input type="radio" value="2" name="cp" [(ngModel)]="cp"> 2 : angine atypique
-               </label>
-               <label class="radio-inline">
-                  <input type="radio"  value="3" name="cp" [(ngModel)]="cp"> 3 : douleur non angorale 
-               </label>
-               <label class="radio-inline">
-                  <input type="radio"  value="4" name="cp" [(ngModel)]="cp"> 4 : asymptotique
-               </label>
+               
+                 <input type="radio" value="0" name="cp" [(ngModel)]="cp"> 0 : pour angine de poitrine typique<br>
+              
+                  <input type="radio" value="1" name="cp" [(ngModel)]="cp"> 1 : angine atypique<br>
+               
+              
+                  <input type="radio"  value="2" name="cp" [(ngModel)]="cp"> 2 : douleur non angorale <br>
+              
+              
+                  <input type="radio"  value="3" name="cp" [(ngModel)]="cp"> 3 : asymptotique<br>
+
+                  <small class="text-danger" [class.d-none]="type.valid || type.untouched">Ce champs est obligatoire</small>
+               
           </div>
 
 
@@ -67,26 +66,27 @@
 
           <div class="section"><span>6</span>Votre valeur de glycémie du sang a jeun ?</div>
           <div class="inner-wrap">    
-               <label class="radio-inline">
-                 <input type="radio" value="1" name="fbs" [(ngModel)]="fbs"> 1 : si la glycémie a jeun > 120 mg/dl
-               </label> 
-               <label class="radio-inline">
-                  <input type="radio" value="2" name="fbs" [(ngModel)]="fbs"> 2 : Sinon
-               </label>
+             
+                 <input type="radio" value="0" name="fbs" [(ngModel)]="fbs"> 0 : si la glycémie a jeun > 120 mg/dl<br>
+              
+                  <input type="radio" value="1" name="fbs" [(ngModel)]="fbs"> 1 : Sinon<br>
+
+                  <small class="text-danger" [class.d-none]="type.valid || type.untouched">Ce champs est obligatoire</small>
+               
           </div>
 
           
             <div class="section"><span>7</span>l'electrocardiagramme au repos ?</div>
             <div class="inner-wrap">    
-               <label class="radio-inline">
-                 <input type="radio" value="0" name="restecg" [(ngModel)]="restecg"> 0 : normal
-               </label> 
-               <label class="radio-inline">
-                  <input type="radio" value="1" name="restecg" [(ngModel)]="restecg"> 1 : onde ST-T anormale
-               </label>
-               <label class="radio-inline">
-                  <input type="radio" value="2" name="restecg" [(ngModel)]="restecg"> 2 : hypertrophie ventriculaire gauche
-               </label>
+             
+                 <input type="radio" value="0" name="restecg" [(ngModel)]="restecg"> 0 : normal<br>
+           
+                  <input type="radio" value="1" name="restecg" [(ngModel)]="restecg"> 1 : onde ST-T anormale<br>
+            
+             
+                  <input type="radio" value="2" name="restecg" [(ngModel)]="restecg"> 2 : hypertrophie ventriculaire gauche<br>
+                  <small class="text-danger" [class.d-none]="type.valid || type.untouched">Ce champs est obligatoire</small>
+              
             </div>
 
 
@@ -99,12 +99,10 @@
             
             <div class="section"><span>9</span>Est ce que vous sentez une douleur de poitrine lors d'un exercice phyqie ?</div>
             <div class="inner-wrap">    
-               <label class="radio-inline">
-                 <input type="radio" value="1" name="exang" [(ngModel)]="exang"> 1 :  oui
-               </label> 
-               <label class="radio-inline">
-                  <input type="radio" value="2" name="exang" [(ngModel)]="exang"> 2 : Sinon
-               </label>
+                 <input type="radio" value="0" name="exang" [(ngModel)]="exang"> 0 :  oui<br>
+                  <input type="radio" value="1" name="exang" [(ngModel)]="exang"> 1 : Sinon<br>
+                  <small class="text-danger" [class.d-none]="type.valid || type.untouched">Ce champs est obligatoire</small>
+
             </div>
 
 
@@ -117,15 +115,11 @@
           
             <div class="section"><span>11</span>Quel est la pente du segment ST durant l'exercice physique ?</div>
             <div class="inner-wrap">    
-               <label class="radio-inline">
-                 <input type="radio" value="0" name="slope" [(ngModel)]="slope"> 0 : ascendante
-               </label> 
-               <label class="radio-inline">
-                  <input type="radio" value="1" name="slope" [(ngModel)]="slope"> 1 : plat
-               </label>
-               <label class="radio-inline">
-                  <input type="radio" value="2" name="slope" [(ngModel)]="slope"> 2 : descendate
-               </label>
+                 <input type="radio" value="0" name="slope" [(ngModel)]="slope"> 0 : ascendante<br>
+                  <input type="radio" value="1" name="slope" [(ngModel)]="slope"> 1 : plat<br>
+                  <input type="radio" value="2" name="slope" [(ngModel)]="slope"> 2 : descendate<br>
+                  <small class="text-danger" [class.d-none]="type.valid || type.untouched">Ce champs est obligatoire</small>
+
              </div>
 
 
@@ -133,32 +127,28 @@
             <div class="inner-wrap">  
             <label class="radio-inline">
                &nbsp; &nbsp;
-               <input type="radio" value="0" name="ca" [(ngModel)]="ca"> 0 &nbsp; &nbsp;
-               <input type="radio" value="1" name="ca" [(ngModel)]="ca"> 1 &nbsp; &nbsp;
-               <input type="radio" value="2" name="ca" [(ngModel)]="ca">  2 &nbsp; &nbsp;
-               <input type="radio" value="3" name="ca" [(ngModel)]="ca">  3
+               <input  type="radio" value=0 name="ca" [(ngModel)]="ca" #type='ngModel' required > 0 &nbsp; &nbsp;
+               <input  type="radio" value=1 name="ca" [(ngModel)]="ca" #type='ngModel'  required> 1 &nbsp; &nbsp;
+               <input  type="radio" value=2 name="ca" [(ngModel)]="ca" #type='ngModel'  required> 2 &nbsp; &nbsp;
+               <input type="radio" value=3 name="ca" [(ngModel)]="ca">  3
+              <small class="text-danger" [class.d-none]="type.valid || type.untouched">Ce champs est obligatoire</small>
+    
            </label>
            </div>
-
-
+      
          <div class="section"><span>13</span>Quel est votre status de thalassemia ?</div>
            <div class="inner-wrap">    
-               <label class="radio-inline">
-                 <input type="radio" value="1" name="thal" [(ngModel)]="thal"> 1 : normal
-               </label> 
-               <label class="radio-inline">
-                  <input type="radio" value="2" name="thal" [(ngModel)]="thal"> 2 : defaut corrigé
-               </label>
-               <label class="radio-inline">
-                  <input type="radio" value="3" name="thal" [(ngModel)]="thal"> 3 : défaut réversible
-               </label>
+               <input  type="radio" value=1 name="thal" [(ngModel)]="thal" #type='ngModel' required > 1 : normal<br>
+               <input  type="radio" value=2 name="thal" [(ngModel)]="thal" #type='ngModel'  required> 2 : defaut corrigé<br>
+               <input  type="radio" value=3 name="thal" [(ngModel)]="thal" #type='ngModel'  required> 3 : défaut réversible
+              <small class="text-danger" [class.d-none]="type.valid || type.untouched">Ce champs est obligatoire</small>
             </div>
 
-         <button [disabled]="f.invalid" type="submit" class="btn">Valider</button>
+         <button [disabled]="f.invalid"  type="submit"  class="btn">Valider</button>
  
       </form>
       </div>
+   
       
       </body>
-      </html>   
-
+      </html>
